Fix alignment of footer image

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -133,6 +133,7 @@
 
 .flex-media-left {
     position: absolute;
+    top: 4px;
 }
 
 .flex-media-right {
